// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link/Featured Custom color 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: hotpink;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="hotpink"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Featured Default - left aligned, medium size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Featured disabled link 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    size={16}
    type="#3498db"
  >
    <span
      href="#"
    >
      Awesome Link
    </span>
  </div>
</div>
`;

exports[`Storyshots Link/Featured disabled link with onClick function 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    size={16}
    type="#3498db"
  >
    <span>
      Awesome disabled link
    </span>
  </div>
</div>
`;

exports[`Storyshots Link/Featured external 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <a
    href="#"
  >
    Awesome Link
    <i
      className="wg-external-link margin-left"
    />
  </a>
</div>
`;

exports[`Storyshots Link/Featured external, mini size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.14;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={14}
  type="#3498db"
>
  <a
    href="#"
  >
    Awesome Link
    <i
      className="wg-external-link margin-left"
    />
  </a>
</div>
`;

exports[`Storyshots Link/Featured external, mini size, white color 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.14;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: white;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(255,255,255,0.56);
}

<div
  style={
    Object {
      "background": "rgba(0, 0, 0, 0.32)",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={14}
    type="white"
  >
    <a
      href="#"
    >
      Awesome Link
      <i
        className="wg-external-link margin-left"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Featured external, white color 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: white;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(255,255,255,0.56);
}

<div
  style={
    Object {
      "background": "rgba(0, 0, 0, 0.32)",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={16}
    type="white"
  >
    <a
      href="#"
    >
      Awesome Link
      <i
        className="wg-external-link margin-left"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Featured link with onClick function 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={16}
    type="#3498db"
  >
    <span
      onClick={[Function]}
    >
      Awesome Link
    </span>
  </div>
</div>
`;

exports[`Storyshots Link/Featured no href 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <span>
    Awesome Link
  </span>
</div>
`;

exports[`Storyshots Link/Featured no href with left icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <span>
    <i
      className="wg-place margin-right }"
    />
    Awesome Link
  </span>
</div>
`;

exports[`Storyshots Link/Featured right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={16}
    type="#3498db"
  >
    <a
      href="#"
    >
      Awesome Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Featured with left icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <a
    href="#"
  >
    <i
      className="wg-place margin-right }"
    />
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Featured with left icon, mini size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.14;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={14}
  type="#3498db"
>
  <a
    href="#"
  >
    <i
      className="wg-place margin-right }"
    />
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Featured with left icon, mini size, white color 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.14;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: white;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(255,255,255,0.56);
}

<div
  style={
    Object {
      "background": "rgba(0, 0, 0, 0.32)",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={14}
    type="white"
  >
    <span>
      <i
        className="wg-place margin-right }"
      />
      Awesome Link
    </span>
  </div>
</div>
`;

exports[`Storyshots Link/Featured with left icon, white color 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: white;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(255,255,255,0.56);
}

<div
  style={
    Object {
      "background": "rgba(0, 0, 0, 0.32)",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={18}
    type="white"
  >
    <span>
      <i
        className="wg-place margin-right }"
      />
      Awesome Link
    </span>
  </div>
</div>
`;

exports[`Storyshots Link/Featured with right icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#3498db"
>
  <a
    href="#"
  >
    Awesome Link
    <i
      className="wg-place margin-left }"
    />
  </a>
</div>
`;
